    to true/0 from the body of compiled predicate clauses and the removal of
    redundant calls to (=)/2 from the body of clauses generated by the
    expansion of grammar rules).

    Added a "source_data" flag, whose default value is "on". With this flag
    set to "on", Logtalk will keep the information represented using mode/2
    and info/2 directives plus source location data (including source file
    names and line numbers), useful both for debugging and for integration
    with development tools. This flag can be turned off in order to generate
    more compact code.

    Implemented protected/1 and private/1 properties for objects, protocols,
    and categories. Together with the public/1 property, these properties
    allows the list of predicates declared in the entity to be accessed for
    reflective computations. Implemented declares/2, defines/2, and includes/3
    properties for accessing the properties of predicates declared and defined
    within an entity. Declaration properties include line/1, the line number
    of the predicate scope directive. Definition properties include line/1,
    the line number of the head of the first clause for the predicate, and
    clauses/1, the number of clauses for the predicate.

    Implemented compiler support for the meta_non_terminal/1 directive and the
    call//N built-in non-terminal.

    Simplified the compilation of grammar rules by removing the support for
    dealing with non-terminal scope and existence errors at the grammar rule
    level instead of the predicate level. Although this feature could be
    helpful when debugging grammar rules, it complicated the integration of
    Logtalk with Prolog-native development tools.

    Updated the Logtalk compiler in order to save the entity clause locations
    and make this information available to the back-end Prolog compilers.

    Updated the Logtalk compiler in order to avoid generating unnecessary